--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">App15</string>
+    <string name="app_name">EmotionApp</string>
     <string name="facebook_app_id">564106207093254</string>
     <string name="fb_login_protocol_scheme">fbAPP_ID</string>
-    <string name="title_activity_mant_tareas">MantTareasActivity</string>
+    <string name="title_activity_init_emotion">Seleccione Imagen</string>
 </resources>
